kompose-yaml/api-cpu-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: api-cpu
  name: api-cpu
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api-cpu
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/odfe-net: "true"
        io.kompose.service: api-cpu
    spec:
      containers:
        - image: api-cpu
          name: api-cpu
          ports:
            - containerPort: 8000
          resources: {}
          volumeMounts:
            - mountPath: /home/user/artifacts
              name: api-cpu-claim0
      restartPolicy: Always
      volumes:
        - name: api-cpu-claim0
          persistentVolumeClaim:
            claimName: api-cpu-claim0
status: {}
