kompose-yaml/odfe-node1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: odfe-node1
  name: odfe-node1
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: odfe-node1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/odfe-net: "true"
        io.kompose.service: odfe-node1
    spec:
      containers:
        - env:
            - name: discovery.type
              value: single-node
            - name: node.name
              value: odfe-node1
          image: amazon/opendistro-for-elasticsearch:1.13.2
          name: odfe-node1
          ports:
            - containerPort: 9200
          resources: {}
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data
              name: odfe-data1
      restartPolicy: Always
      volumes:
        - name: odfe-data1
          persistentVolumeClaim:
            claimName: odfe-data1
status: {}
